# company-plugins

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: coach.md  developer.md  project-manager.md
.claude/commands/: latex-cheatsheet.md  team.md
.claude/skills/excalidraw-diagram/references/: pyproject.toml  render_excalidraw.py
.claude/skills/latex-cheatsheet/: SKILL.md
.claude/skills/skill-creation/: SKILL.md
plugins/excalidraw/.claude-plugin/: plugin.json
plugins/excalidraw/commands/: excalidraw-diagram.md
plugins/excalidraw/skills/excalidraw-diagram/: SKILL.md
plugins/excalidraw/skills/excalidraw-diagram/references/: json-schema.md  render_excalidraw.py  render_template.html
plugins/latex/.claude-plugin/: plugin.json
plugins/latex/commands/: latex-document.md  latex.md
plugins/latex/skills/latex/: SKILL.md
plugins/teamwork/.claude-plugin/: plugin.json
plugins/teamwork/agents/: marketing-strategist.md
plugins/teamwork/skills/handoff-format/: SKILL.md
