[project]
name = "excalidraw-renderer"
version = "0.1.0"
description = "Render Excalidraw JSON diagrams to PNG via Playwright"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
